moving drools.reasoner to context.

--- a/long_term_behav/drools.pom/pom.xml
+++ b/long_term_behav/drools.pom/pom.xml
@@ -22,8 +22,8 @@
 		</dependencies>
 	</dependencyManagement>
 	<modules>
-<!-- 		<module>../../ontologies/ont.drools</module> -->
-		<module>../drools.reasoner</module>
+<!-- 		<module>../../ontologies/ont.drools</module> 
+		<module>../drools.reasoner</module>-->
 	</modules>
 	<developers>
 		<developer>
