--- a/ontologies/ont.pom/pom.xml
+++ b/ontologies/ont.pom/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<artifactId>ont.pom</artifactId>
 		<groupId>org.universAAL.ontology</groupId>
-		<version>2.0.3-SNAPSHOT</version>
+		<version>2.0.4-SNAPSHOT</version>
 	</parent>
 	<groupId>org.universAAL.ontology.services</groupId>
 	<artifactId>ont.pom</artifactId>
-	<version>2.0.3-SNAPSHOT</version>
+	<version>2.0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>universAAL Ontology Suite</name>
 	<description>Set of ontologies used within universAAL</description>
@@ -20,6 +20,7 @@
 		<module>../ont.ltba</module>
 		<module>../ont.nutrition</module>
 		<module>../ont.medication</module>
+		<module>../ont.shopping</module>
 		
 	<!--	<module>../ont.message</module>
 		<module>../ont.questionnaireStrategy</module>
@@ -29,7 +30,7 @@
 		<module>../ont.fitbitdata</module>
 		<module>../ont.readenergy</module>
 		<module>../ont.safety</module>
-		<module>../ont.shopping</module>-->
+		-->
 
 	</modules>
 	<scm>
