--- a/food_shopping/food_shopping.service.server/pom.xml
+++ b/food_shopping/food_shopping.service.server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>shopping.pom</artifactId>
-  	<version>E.3</version>
+  	<version>E.4.1-SNAPSHOT</version>
   	<relativePath>../shopping.pom/</relativePath>
   </parent>
   
@@ -15,7 +15,7 @@
   <inceptionYear>2011</inceptionYear>
     <dependencies>
 		<dependency>
-			<groupId>org.apache.felix</groupId>
+			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
