--- a/food_shopping/shopping.pom/pom.xml
+++ b/food_shopping/shopping.pom/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>new_services.pom</artifactId>
-    <version>E.3</version>
+    <version>E.4</version>
     <relativePath>../../new_services.pom</relativePath>
   </parent>
   
   <artifactId>shopping.pom</artifactId>
-  <version>E.3</version>  
+  <version>E.4.1-SNAPSHOT</version>  
   <packaging>pom</packaging>
   <name>Food Shopping AAL Service</name>
   <url>http://forge.universaal.org/wiki/new_services:Food_Shopping_universAAL_service</url>
@@ -34,9 +34,15 @@
   	<!-- <module>../food_shopping.service.RFidProvider</module> -->
   	<module>../food_shopping.service.client</module>
   	<module>../food_shopping.service.server</module>
+  	<module>../shopping.karaf.feature</module>
   </modules>
   	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.core</artifactId>
+				<version>4.2.0</version>
+			</dependency>
 			<dependency>
 				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>food_shopping.service.server</artifactId>
@@ -52,6 +58,12 @@
 				<artifactId>food_shopping.service.RFidProvider</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.universAAL.AALapplications</groupId>
+				<artifactId>shopping.karaf.feature</artifactId>
+				<version>2.0.4-SNAPSHOT</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
