--- a/agenda/agenda.remote/pom.xml
+++ b/agenda/agenda.remote/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>E.3</version>
+		<version>E.4</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 
@@ -23,7 +23,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.felix</groupId>
+			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
