--- a/agenda/agenda.server/pom.xml
+++ b/agenda/agenda.server/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>E.3</version>
+		<version>E.4</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 
@@ -28,7 +28,7 @@
 		<!--			<artifactId>junit</artifactId>-->
 		<!--		</dependency>-->
 		<dependency>
-			<groupId>org.apache.felix</groupId>
+			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
