followMeExampleGUI and Hall now use new_services.pom E.4 instead E.2, and org.osgi.core from org.osgi instead org.apache.felix, svn ignore. deployed this version also

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+FollowMeExamples/FollowMeHall/target
 ZWaveInterface/ZWave.feature/.classpath
 ZWaveInterface/ZWave.feature/.project
 ZWaveInterface/ZWave.feature/.settings
