--- a/agenda/agenda.runner/runner/configurations/services/mw.managers.aalspace.core.properties
+++ b/agenda/agenda.runner/runner/configurations/services/mw.managers.aalspace.core.properties
@@ -1,7 +1,7 @@
 #Path for the Default AALSpace configurations directory
-aalSpaceConfigurationPath=configurations/etc/
+aalSpaceConfigurationPath=C:/universAAL/new_services/trunk/agenda/agenda.runner/runner/configurations/services/configurations/etc/
 #Path to the AALSpace XSD file
-aalSpaceSchemaURL= configurations/etc/
+aalSpaceSchemaURL= C:/universAAL/new_services/trunk/agenda/agenda.runner/runner/configurations/services/configurations/etc/
 aalSpaceSchemaName= aalspace.xsd
 #Millis to wait after the request to leave before closing the channels
 waitBeforeClosingChannels = 2000
