agenda runner E.4 - javax servlet added (otherwise missing in ri.servicegateway)

--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -19,12 +19,16 @@
 					<args>pax.configuration</args>
 					<provision>
 
+
+
 						<provision>scan-composite:mvn:org.universAAL.middleware/mw.composite/2.0.4-SNAPSHOT/composite</provision>
 						<provision>scan-composite:mvn:org.universAAL.ontology/ont.composite/2.0.4-SNAPSHOT/composite</provision>
 						<provision>scan-composite:mvn:org.universAAL.context/ctxt.che/2.0.5-SNAPSHOT/composite</provision>
 
 						<provision>scan-composite:mvn:org.universAAL.context/ctxt.prof.server/2.0.4-SNAPSHOT/composite</provision>
 						<provision>scan-composite:mvn:org.universAAL.security/security.authenticator.userPassword.client/2.0.4-SNAPSHOT/composite</provision>
+						 
+						 <provision>wrap:mvn:javax.servlet/servlet-api/2.5</provision>
 						<provision>scan-composite:mvn:org.universAAL.remote/ri.servicegateway/2.0.4-SNAPSHOT/composite</provision>
 
 
