--- a/agenda/agenda.runner/runner/configurations/services/mw.connectors.discovery.slp.core.properties
+++ b/agenda/agenda.runner/runner/configurations/services/mw.connectors.discovery.slp.core.properties
@@ -2,7 +2,7 @@
 aalSpaceServiceType = service:aalspace
 #if to switch on/off the browseSLPNetwork  
 browseSLPNetwork = true
-#Initial delay before scanning the network
+#Initial deloy before scanning the network
 slpInitDelayScan = 0
 #Period of scan for the SLP network
 slpPeriodScan = 1
