--- a/agenda/agenda.runner/runner/configurations/services/mw.managers.aalspace.core.properties
+++ b/agenda/agenda.runner/runner/configurations/services/mw.managers.aalspace.core.properties
@@ -1,15 +1,14 @@
 #Path for the Default AALSpace configurations directory
-aalSpaceConfigurationPath=C:/universAAL/new_services/trunk/agenda/agenda.runner/runner/configurations/services/configurations/etc/
+aalSpaceConfigurationPath=C:/universAAL/svn/new_services/trunk/agenda/agenda.runner/runner/configurations/etc/
 #Path to the AALSpace XSD file
-aalSpaceSchemaURL= C:/universAAL/new_services/trunk/agenda/agenda.runner/runner/configurations/services/configurations/etc/
-aalSpaceSchemaName= aalspace.xsd
+aalSpaceSchemaURL=C:/universAAL/dev/workspaces/prototype/rundir/etc/
+aalSpaceSchemaName=aalspace.xsd
 #Millis to wait after the request to leave before closing the channels
 waitBeforeClosingChannels = 2000
 waitAfterJoinRequest = 3000
 
 #Properties for the peer
 peerRole=COORDINATOR
-#peerRole=PEER
 
 #Properties for AALSpace Manager
 spaceExtension=space
