--- a/agenda/agenda.runner/runner/configurations/services/org.ops4j.pax.logging.properties
+++ b/agenda/agenda.runner/runner/configurations/services/org.ops4j.pax.logging.properties
@@ -1,80 +1,10 @@
+log4j.rootLogger=INFO, RL
+log4j.appender.RL=org.apache.log4j.ConsoleAppender
+log4j.appender.RL.layout=org.apache.log4j.PatternLayout
+log4j.appender.RL.layout.ConversionPattern= %-10.10t [%d] %-5p - %m %n
 
-# Root logger
-log4j.rootLogger=INFO, out, osgi:*
-log4j.throwableRenderer=org.apache.log4j.OsgiThrowableRenderer
-
-# To avoid flooding the log when using DEBUG level on an ssh connection and doing log:tail
-log4j.logger.org.apache.sshd.server.channel.ChannelSession = INFO
-
-# CONSOLE appender not used by default
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
-
-# File appender
-log4j.appender.out=org.apache.log4j.RollingFileAppender
-log4j.appender.out.layout=org.apache.log4j.PatternLayout
-log4j.appender.out.layout.ConversionPattern=%d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
-log4j.appender.out.file=${karaf.data}/log/karaf.log
-log4j.appender.out.append=true
-log4j.appender.out.maxFileSize=1MB
-log4j.appender.out.maxBackupIndex=10
-
-# Sift appender
-log4j.appender.sift=org.apache.log4j.sift.MDCSiftingAppender
-log4j.appender.sift.key=bundle.name
-log4j.appender.sift.default=karaf
-log4j.appender.sift.appender=org.apache.log4j.FileAppender
-log4j.appender.sift.appender.layout=org.apache.log4j.PatternLayout
-log4j.appender.sift.appender.layout.ConversionPattern=%d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %m%n
-log4j.appender.sift.appender.file=${karaf.data}/log/$\\{bundle.name\\}.log
-log4j.appender.sift.appender.append=true
-log4j.logger.org.universAAL = DEBUG, uAAL.logsetup
-
-log4j.appender.uAAL.logsetup=org.apache.log4j.RollingFileAppender
-log4j.appender.uAAL.logsetup.layout=org.apache.log4j.PatternLayout
-log4j.appender.uAAL.logsetup.layout.ConversionPattern = %d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} |  %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
-log4j.appender.uAAL.logsetup.file=${karaf.data}/log/uAAL.log
-log4j.appender.uAAL.logsetup.append=true
-log4j.appender.uAAL.logsetup.maxFileSize=1MB
-log4j.appender.uAAL.logsetup.maxBackupIndex=10
-log4j.logger.ch.ethz.iks.slp = DEBUG, slp.logsetup
-
-log4j.appender.slp.logsetup=org.apache.log4j.RollingFileAppender
-log4j.appender.slp.logsetup.layout=org.apache.log4j.PatternLayout
-log4j.appender.slp.logsetup.layout.ConversionPattern = %d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %m%n
-log4j.appender.slp.logsetup.file=${karaf.data}/log/slp.log
-log4j.appender.slp.logsetup.append=true
-log4j.appender.slp.logsetup.maxFileSize=1MB
-log4j.appender.slp.logsetup.maxBackupIndex=10
-log4j.logger.org.jgroups = DEBUG, jgroups.logsetup
-
-log4j.appender.jgroups.logsetup=org.apache.log4j.RollingFileAppender
-log4j.appender.jgroups.logsetup.layout=org.apache.log4j.PatternLayout
-log4j.appender.jgroups.logsetup.layout.ConversionPattern = %d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %m%n
-log4j.appender.jgroups.logsetup.file=${karaf.data}/log/jGroups.log
-log4j.appender.jgroups.logsetup.append=true
-log4j.appender.jgroups.logsetup.maxFileSize=1MB
-log4j.appender.jGroups.maxBackupIndex=10
-
-#uAAL-MW logger
-log4j.logger.org.universAAL.mw = DEBUG, uAAL.mw.logsetup
-
-log4j.appender.uAAL.mw.logsetup=org.apache.log4j.RollingFileAppender
-log4j.appender.uAAL.mw.logsetup.layout=org.apache.log4j.PatternLayout
-log4j.appender.uAAL.mw.logsetup.layout.ConversionPattern = %d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
-log4j.appender.uAAL.mw.logsetup.file=${karaf.data}/log/uAAL-MW.log
-log4j.appender.uAAL.mw.logsetup.append=true
-log4j.appender.uAAL.mw.logsetup.maxFileSize=1MB
-log4j.appender.uAAL.mw.logsetup.maxBackupIndex=10
-
-#uAAL-UI logger
-log4j.logger.org.universAAL.ui = TRACE, uAAL.ui.logsetup
-log4j.logger.org.universAAL.mw.bus.ui = TRACE, uAAL.ui.logsetup
-log4j.appender.uAAL.ui.logsetup=org.apache.log4j.RollingFileAppender
-log4j.appender.uAAL.ui.logsetup.layout=org.apache.log4j.PatternLayout
-log4j.appender.uAAL.ui.logsetup.layout.ConversionPattern = %d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
-log4j.appender.uAAL.ui.logsetup.file=${karaf.data}/log/uAAL-UI.log
-log4j.appender.uAAL.ui.logsetup.append=true
-log4j.appender.uAAL.ui.logsetup.maxFileSize=1MB
-log4j.appender.uAAL.ui.logsetup.maxBackupIndex=10
+log4j.logger.org.universAAL = DEBUG, uAAL
+log4j.appender.uAAL=org.apache.log4j.FileAppender
+log4j.appender.uAAL.File=uAAL.log
+log4j.appender.uAAL.layout=org.apache.log4j.PatternLayout
+log4j.appender.uAAL.layout.ConversionPattern= %-10.10t [%d] %-5p - %m %n
