--- a/food_shopping/shopping.karaf.feature/pom.xml
+++ b/food_shopping/shopping.karaf.feature/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>shopping.karaf.feature</artifactId>
   <groupId>org.universAAL.AALapplication</groupId>
   <version>2.0.4-SNAPSHOT</version>
-  <name>universAAL Karaf Feature Ontologies</name>
+  <name>Food and Shopping AAL Service Karaf Feature</name>
   <properties>
     <commons-beanutils-version>1.8.3</commons-beanutils-version>
     <commons-codec-version>1.4</commons-codec-version>
