removed WP4 repo

--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -149,7 +149,7 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
-		<repository>
+<!-- 	 	<repository>
 			<id>uaal-wp4-private</id>
 			<name>WP4 services private repo</name>
 			<url>http://nexus.lst.tfo.upm.es/content/repositories/private-uAAL-WP4/</url>
@@ -172,10 +172,10 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-		</repository>
+		</repository>  -->
 	</repositories>
 	
-	<distributionManagement>
+<!-- 	<distributionManagement>
 		<snapshotRepository>
 			<id>uaal-wp4-private</id>
 			<url>http://nexus.lst.tfo.upm.es/content/repositories/private-uAAL-WP4/</url>
@@ -184,6 +184,6 @@
 			<id>uaal-wp4-release</id>
 			<url>http://nexus.lst.tfo.upm.es/content/repositories/private-uAAL-WP4-release/</url>
 		</repository>
-	</distributionManagement>
+	</distributionManagement> -->
 	
 </project>
