--- a/health/health.performedSession.manager/pom.xml
+++ b/health/health.performedSession.manager/pom.xml
@@ -5,20 +5,20 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.2.1-SNAPSHOT</version>
+    <version>E.4.1-SNAPSHOT</version>
     <relativePath>../health.pom</relativePath>
   </parent>
   <artifactId>health.performedSession.manager</artifactId>
-  <version>E.2.1-SNAPSHOT</version>
+  <version>E.4.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Health Performed Session Mananger</name>
   <description>Enables Storage, and Listing of sessions that the assisted person has performed</description>
   <inceptionYear>2011</inceptionYear>
   <dependencies>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.osgi.core</artifactId>
-    </dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+		</dependency>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.profile.health</artifactId>
