--- a/health/health.ui.client/pom.xml
+++ b/health/health.ui.client/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.2.1-SNAPSHOT</version>
+    <version>E.4.1-SNAPSHOT</version>
     <relativePath>../health.pom/</relativePath>
   </parent>
   <artifactId>health.ui.client</artifactId>
-  <version>E.2.1-SNAPSHOT</version>
+  <version>E.4.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Health UI interface</name>
   <description>UI interface for health service</description>
@@ -21,14 +21,14 @@
     </license>
   </licenses>
   <dependencies>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.osgi.core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.osgi.compendium</artifactId>
-    </dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+		</dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.apache.felix</groupId> -->
+<!--       <artifactId>org.osgi.compendium</artifactId> -->
+<!--     </dependency> -->
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.profile.health</artifactId>
