--- a/health/health.x73.adapter/pom.xml
+++ b/health/health.x73.adapter/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.2.1-SNAPSHOT</version>
+    <version>E.4.1-SNAPSHOT</version>
     <relativePath>../health.pom</relativePath>
   </parent>
   <artifactId>health.x73.adapter</artifactId>
-  <version>E.2.1-SNAPSHOT</version>
+  <version>E.4.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Health X73 adapter</name>
   
@@ -49,10 +49,10 @@
   		<groupId>org.universAAL.middleware</groupId>
   		<artifactId>mw.container.osgi</artifactId>
   	</dependency>
-  	<dependency>
-  		<groupId>org.apache.felix</groupId>
-  		<artifactId>org.osgi.core</artifactId>
-  	</dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+		</dependency>
   </dependencies>
 
   <build>
