--- a/.gitattributes
+++ b/.gitattributes
@@ -475,8 +475,8 @@ common/contact_manager/contact.manager.shell.commands/src/main/resources/newVCar
 common/contact_manager/contact.manager.shell.commands/src/main/resources/newVCardGeorge.properties -text
 common/contact_manager/contact.manager.shell.commands/src/main/resources/newVCardTest.properties -text
 food_shopping/README.txt -text
-food_shopping/food_shopping.service.client/ASL2.0 -text
-food_shopping/food_shopping.service.client/NOTICE -text
+food_shopping/food_shopping.service.client/ASL2.0.txt -text
+food_shopping/food_shopping.service.client/NOTICE.txt -text
 food_shopping/food_shopping.service.client/pom.xml -text
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/FoodManagementClient.java -text
 food_shopping/food_shopping.service.client/src/main/java/org/universAAL/AALapplication/food_shopping/service/uiclient/FoodManagementUIClient.java -text
