--- a/health/health.feature/pom.xml
+++ b/health/health.feature/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.4.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../health.pom/</relativePath>
   </parent>
   <artifactId>health.karaf.feature</artifactId>
-  <version>E.4.1-SNAPSHOT</version>
+  <version>F.0</version>
   <name>Health Karaf Features</name>
     <dependencies>
       <dependency>
