--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>new_services.pom</artifactId>
-    <version>E.4</version>
+    <version>F.0</version>
     <relativePath>../../new_services.pom</relativePath>
   </parent>
   <artifactId>health.pom</artifactId>
-  <version>E.4.1-SNAPSHOT</version>
+  <version>F.0</version>
   <packaging>pom</packaging>
   <name>Health Management AAL Service</name>
   <url>http://forge.universaal.org/wiki/new_services:Health_Management_universAAL_service</url>
