--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -5,12 +5,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.4.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../health.pom</relativePath>
   </parent>
   <artifactId>health.profile.manager</artifactId>
   <name>Health Profile Manager</name>
-  <version>E.4.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
@@ -79,4 +78,5 @@
       </dependencies>
     </profile>
   </profiles>
+  <version>F.0</version>
 </project>
