--- a/health/health.treat.manager/pom.xml
+++ b/health/health.treat.manager/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.4.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../health.pom</relativePath>
   </parent>
   <artifactId>health.treat.manager</artifactId>
-  <version>E.4.1-SNAPSHOT</version>
+  <version>F.0</version>
   <packaging>bundle</packaging>
   <name>Health Treatment Manager</name>
   <description>Enables adding, editing, listing and deleting Treatments that the assisted person must follow</description>
