--- a/health/health.ui.client/pom.xml
+++ b/health/health.ui.client/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.4.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../health.pom/</relativePath>
   </parent>
   <artifactId>health.ui.client</artifactId>
-  <version>E.4.1-SNAPSHOT</version>
+  <version>F.0</version>
   <packaging>bundle</packaging>
   <name>Health UI interface</name>
   <description>UI interface for health service</description>
