--- a/health/health.x73.adapter/pom.xml
+++ b/health/health.x73.adapter/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>health.pom</artifactId>
-    <version>E.4.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../health.pom</relativePath>
   </parent>
   <artifactId>health.x73.adapter</artifactId>
-  <version>E.4.1-SNAPSHOT</version>
+  <version>F.0</version>
   <packaging>bundle</packaging>
   <name>Health X73 adapter</name>
   
