--- a/medication/medication.manager.configuration/pom.xml
+++ b/medication/medication.manager.configuration/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>E.3.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
 
