--- a/medication/medication.manager.event.issuer/pom.xml
+++ b/medication/medication.manager.event.issuer/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>E.3.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
 
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
-      <version>E.3.1-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
 
   </dependencies>
