--- a/medication/medication.manager.service/pom.xml
+++ b/medication/medication.manager.service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>E.3.1-SNAPSHOT</version>
+    <version>F.0</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
   <artifactId>medication.manager.service</artifactId>
@@ -17,12 +17,12 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>2.0.3-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.ui</artifactId>
-      <version>E.3.1-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.context</groupId>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>E.3.1-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
 
   </dependencies>
