--- a/medication/medication.manager.ui/pom.xml
+++ b/medication/medication.manager.ui/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>E.3.1-SNAPSHOT</version>
+    <version>F.0</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -17,19 +17,19 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>2.0.3-SNAPSHOT</version>
+      <version>3.0.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>E.3.1-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
-      <version>E.3.1-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
 
     <dependency>
