--- a/medication/medication.missing.services.simulation/pom.xml
+++ b/medication/medication.missing.services.simulation/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>E.3.1-SNAPSHOT</version>
+    <version>F.0</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -17,8 +17,7 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>2.0.3-SNAPSHOT</version>
-    </dependency>
+      </dependency>
 
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
@@ -36,7 +35,7 @@
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>E.3.1-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
 
   </dependencies>
