--- a/nutritional/nutritional.karaf.feature/pom.xml
+++ b/nutritional/nutritional.karaf.feature/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>nutritional.pom</artifactId>
-		<version>E.4</version>
+		<version>F.0</version>
 		<relativePath>../nutritional.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>nutritional.karaf.feature</artifactId>
 	<name>Nutritional Advisor AAL Service Karaf Feature</name>
 	<description>Artifact representing representing the Karaf feature for the Nutritional Advisor AAL Service</description>
-	<version>2.0.4-SNAPSHOT</version>
+	<version>3.0.0</version>
   <build>
     <!--resources>
        <resource>
