--- a/ontologies/ont.nutrition/pom.xml
+++ b/ontologies/ont.nutrition/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <artifactId>ont.pom</artifactId>
     <groupId>org.universAAL.ontology.services</groupId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../ont.pom</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.nutrition</artifactId>
-  <version>2.0.4-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>bundle</packaging>
   <name>Nutritional Advisor Service - Ontology</name>
   <description>Ontology for the services that manage Context History</description>
