--- a/ontologies/ont.pom/pom.xml
+++ b/ontologies/ont.pom/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<artifactId>ont.pom</artifactId>
 		<groupId>org.universAAL.ontology</groupId>
-		<version>2.0.4-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 	<groupId>org.universAAL.ontology.services</groupId>
 	<artifactId>ont.pom</artifactId>
-	<version>2.0.4-SNAPSHOT</version>
+	<version>3.0.0</version>
 	<packaging>pom</packaging>
 	<name>universAAL Ontology Suite</name>
 	<description>Set of ontologies used within universAAL</description>
@@ -25,12 +25,10 @@
 		<module>../ont.questionnaireStrategy</module>
 		<module>../ont.activity</module>
 		<module>../ont.biomedicalsensors</module>
-		<!--<module>../ont.aalfficiencyscores</module>
+		<module>../ont.safety</module>
+		<module>../ont.aalfficiencyscores</module>
 		<module>../ont.fitbitdata</module>
 		<module>../ont.readenergy</module>
-		<module>../ont.safety</module>
-		-->
-
 	</modules>
 	<scm>
 		<connection>${svn.base}/${project.artifactId}</connection>
