--- a/ontologies/ont.questionnaireStrategy/pom.xml
+++ b/ontologies/ont.questionnaireStrategy/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <artifactId>ont.pom</artifactId>
     <groupId>org.universAAL.ontology.services</groupId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../ont.pom</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.questionnaireStrategy</artifactId>
-  <version>2.0.4-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>bundle</packaging>
   <name>Health Manager Service - Questionnaire Strategy Ontology</name>
   <properties>
