--- a/ontologies/ont.safety/pom.xml
+++ b/ontologies/ont.safety/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <artifactId>ont.pom</artifactId>
     <groupId>org.universAAL.ontology.services</groupId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../ont.pom</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.safety</artifactId>
-  <version>2.0.3-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>bundle</packaging>
   <name>Safety and Security Service - Ontology</name>
   <description>An ontology defining the most general concepts for Safety and Security at home</description>
