--- a/ontologies/ont.shopping/pom.xml
+++ b/ontologies/ont.shopping/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <artifactId>ont.pom</artifactId>
     <groupId>org.universAAL.ontology.services</groupId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>3.0.0</version>
     <relativePath>../ont.pom</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.shopping</artifactId>
-  <version>2.0.4-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>bundle</packaging>
   <name>Food and Shopping Service - Ontology</name>
   <description>Food Shopping Ontology</description>
