removed unversioned elements

--- a/.gitignore
+++ b/.gitignore
@@ -454,3 +454,7 @@ safety_home/safety_home.service.windowProvider/.classpath
 safety_home/safety_home.service.windowProvider/.project
 safety_home/safety_home.service.windowProvider/.settings
 safety_home/safety_home.service.windowProvider/target
+workout_at_home/workout_at_home/.classpath
+workout_at_home/workout_at_home/.project
+workout_at_home/workout_at_home/.settings
+workout_at_home/workout_at_home/target
